--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <label for="message">your message</label><br>
                     <textarea name="message" id="message"></textarea>
 
-                    <p>Would you like to visit the starfish</p>
+                    <p class="formp">Would you like to visit the starfish</p>
 
                     <label for="yes">yes</label>
                     <input type="radio" id="yes" name="yes" value="yes">
