changes text style

--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@
             <form action="get">
                 <label for="name"> Your name</label><br>
                 <input type="text" id="name" name="full name"><br>
-                <label for="email">your email</label><br>
+                <label for="email">Your email</label><br>
                 <input type="email" id="email" name="email"><br>
-                <label for="message">your message</label><br>
+                <label for="message">Your message</label><br>
                 <textarea name="message" id="message"></textarea>
 
                 <p class="formp">Would you like to visit the starfish</p>
 
-                <label for="yes">yes</label>
+                <label for="yes">Yes</label>
                 <input type="radio" id="yes" name="yes" value="yes">
-                <label for="no">no</label>
+                <label for="no">No</label>
                 <input type="radio" id="no" name="no" value="no">
-                <label for="maybe">maybe</label>
+                <label for="maybe">Maybe</label>
                 <input type="radio" id="maybe" name="maybe" value="maybe"><br>
                 <input type="submit" value="send">
             </form>
